--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4o
------------
* Typos and bugfixes galore
* Persistent status effects have been coded
 - For now, you can get some stat boosts from Cveta's performances
 - You can also get an experience boost from the food in the LB inn
* Added a lot of pregnancy triggers (including stuff for mpreg). Holler if you find a scene which you feel should trigger an impregnation but doesn't, report it

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4n2
-------------
* Fixed a bug with Anusol-crafting
* Fixed a bug that would lock you in the toy masturbation menu. Menu is now unavailable if no valid toy is present
* Fixed a bunch of typos
* Masturbating with toys now increases your stretch the same way that being fucked would. This means you can gradually build up to taking larger insertions

Version 0.4n
------------
* Bugfixing
* Added masturbation options for the PC
 - Cock. Written by LukaDoc. Patreon-sponsored
 - Breasts. Written by The Observer
 - Pussy. Written by The Observer
 - Ass. Written by The Observer
* Some more scenes for cats
 - Win, get serviced. Requires cock. Written by LukaDoc. Patreon-sponsored
 - Win, get vaginally fucked. Written by LukaDoc. Patreon-sponsored
 - Loss, PC blows cocked cat. Written by LukaDoc. Patreon-sponsored
* Fixed a bug with the Green Scented Candle. It actually does something now
* Added a new Halloween scene, written by QB and LD, featuring a certain doberherm. Find it in the new room in the Mausoleum
* The scenes to acquire Anusol can now be accessed. Talk to Rosalin once you've convinced the game that you really like anal
* The scene to acquire Anusol+ can now be accessed. Bring a vial of Anusol to Jeanne
* Pregnancies now take much longer time than earlier to come to term. ~20-30 days is "normal"
