@@ -11,6 +11,7 @@ Version 0.4o
 * Persistent status effects have been coded
  - For now, you can get some stat boosts from Cveta's performances
  - You can also get an experience boost from the food in the LB inn
+ - The same experience boost is added at the end of the Halloween event (bit late for it, but oh well)
 * Added a lot of pregnancy triggers (including stuff for mpreg). Holler if you find a scene which you feel should trigger an impregnation but doesn't, report it
 
 --------------------------------------------
